fixed air traffic bug on mobile

--- a/src/Components/AirTraffic.css
+++ b/src/Components/AirTraffic.css
@@ -1,12 +1,10 @@
 .air__traffic--container {
-  /* display: flex;
-  align-items: flex-end; */
+  display: flex;
+  align-items: flex-end;
   position: relative;
   width: 100%;
-  height: 20px;
-  margin-bottom: 0;
+  margin-bottom: 40%;
   z-index: 2;
-  border: 5px solid red;
 }
 
 @media only screen and (max-width: 768px) {
